[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/menu/menu_theme_btns.tres" type="Theme" id=1]
[ext_resource path="res://resources/menu/menu_gradient.tres" type="Gradient" id=2]
[ext_resource path="res://resources/menu/alt_title_screen.gd" type="Script" id=3]

[sub_resource type="GradientTexture" id=2]
gradient = ExtResource( 2 )
width = 240

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_top = 136.0
margin_right = 240.0
margin_bottom = 376.0
rect_rotation = -90.0
texture = SubResource( 2 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.0
margin_top = 8.0
margin_right = 65.0
margin_bottom = 26.0
size_flags_vertical = 0
theme = ExtResource( 1 )
text = "Discovery Dreams"
fit_content_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -29.5
margin_right = 25.0
margin_bottom = 29.5
theme = ExtResource( 1 )
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="StartBtn" type="Button" parent="VBoxContainer"]
margin_right = 50.0
margin_bottom = 17.0
rect_min_size = Vector2( 50, 17 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "Start"

[node name="OptionsBtn" type="Button" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 50.0
margin_bottom = 38.0
text = "Options"
expand_icon = true

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 50.0
margin_bottom = 59.0
text = "Quit"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -70.0
margin_top = -20.4
margin_right = 89.0
margin_bottom = -0.399994
theme = ExtResource( 1 )
text = "Made by Sunset and Tara"
fit_content_height = true

[connection signal="pressed" from="VBoxContainer/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
